--- a/src/app/appresource/appresource.component.html
+++ b/src/app/appresource/appresource.component.html
@@ -1,6 +1,12 @@
-<h2>ID {{arc.id}}</h2>
+<h2>List of AppResource</h2>
+<ul>
+  <li *ngFor="let arc of arcCollection">
+    <span>{{arc.id}}</span> {{arc.key}} {{arc.locale?.code || 'null'}}  {{arc.value}}
+  </li>
+</ul>
+<h2>AppResource.ID {{arc.id}}</h2>
 <div><span>key: </span>{{arc.key}}</div>
-<div><span>locale: </span>{{arc.locale.code}}</div>
+<div><span>locale: </span>{{arc.locale?.code}}</div>
 <div><span>original value: </span>{{arc.value}}</div>
 <div>
   <label>value:
