--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-appresource></app-appresource>
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/appresource">AppResource</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
