--- a/src/app/appresource/appresource.component.html
+++ b/src/app/appresource/appresource.component.html
@@ -1,4 +1,19 @@
 <h2>List of AppResource</h2>
+<div>
+  <label>key:
+    <input #arcKey />
+  </label>
+  <label>value:
+    <input #arcValue />
+  </label>
+  <label>help:
+    <input #arcHelp />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(arcKey.value, arcValue.value, arcHelp.value); arcKey.value=''; arcValue.value=''; arcHelp.value=''">
+    add
+  </button>
+</div>
 <ul class="appresource">
   <li *ngFor="let arc of arcCollection">
     <a routerLink="/appresource/{{arc.id}}">
