--- a/src/app/appresource/appresource.component.css
+++ b/src/app/appresource/appresource.component.css
@@ -6,39 +6,67 @@
   width: 15em;
 }
 .appresource li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
+
 .appresource li:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.appresource li.selected {
-  background-color: #CFD8DC;
-  color: white;
+
+.appresource a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
 }
-.appresource li.selected:hover {
-  background-color: #BBD8DC;
-  color: white;
+
+.appresource a:hover {
+  color: #607D8B;
 }
+
 .appresource .badge {
   display: inline-block;
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color:#405061;
+  background-color: #405061;
   line-height: 1em;
   position: relative;
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+
+button {
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: Arial;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button.delete {
+  position: relative;
+  left: 250px;
+  top: -32px;
+  background-color: gray !important;
+  color: white;
 }
