--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,10 @@
 <h3>Dashboard of Clinical Trials...</h3>
 <div class="grid grid-pad">
-	<a *ngFor="let arc of arcCollection" class="col-1-4" routerLink="/appresource/{{arc.id}}">
+    <a *ngFor="let arc of arcCollection" class="col-1-4" routerLink="/appresource/{{arc.id}}">
     <div class="module appresource">
-	    <h4>{{arc.id}} {{arc.key}} {{arc.value}}</h4>
+      <h4>{{arc.id}} {{arc.key}} {{arc.value}}</h4>
     </div>
   </a>
 </div>
+
+<app-appresource-search></app-appresource-search>
