--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,4 @@
   <a routerLink="/appresource">AppResource</a>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<messages></messages>
