--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <h1>{{title}}</h1>
 <nav>
+  <a routerLink="/login">Login</a>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/locales">Locales</a>
   <a routerLink="/appresource">AppResource</a>
 </nav>
 <router-outlet></router-outlet>
-<messages></messages>
+<app-messages></app-messages>
